--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,5 @@
     <string name="HistoryActivityTitle">历史查询记录</string>
     <string name="NetwordTelContacts">手机联系人</string>
     <string name="HismileSignIn">海斯曼签到</string>
-    <string name="AutoRotPack">自动抢红包</string>
+    <string name="WXRedPack">微信抢红包</string>
 </resources>
